refactor build process using tasks concept