@@ -1,34 +1,36 @@
 package com.ttl.internal.vn.tool.builder.cli;
 
-import java.io.BufferedReader;
-import java.io.BufferedWriter;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
-import java.io.FileReader;
-import java.io.FileWriter;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.io.Reader;
-import java.io.Writer;
+import com.ttl.internal.vn.tool.builder.git.GitRef;
+import com.ttl.internal.vn.tool.builder.task.*;
+import com.ttl.internal.vn.tool.builder.util.GitUtil;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.Setter;
+import org.apache.commons.io.FileUtils;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.maven.model.Model;
+import org.apache.maven.model.building.*;
+import org.apache.maven.model.io.xpp3.MavenXpp3Reader;
+import org.apache.maven.shared.invoker.*;
+import org.codehaus.plexus.util.xml.pull.XmlPullParserException;
+import org.eclipse.jgit.api.Git;
+import org.eclipse.jgit.api.errors.GitAPIException;
+import org.eclipse.jgit.diff.DiffEntry;
+import org.eclipse.jgit.errors.RevisionSyntaxException;
+import org.eclipse.jgit.revwalk.RevCommit;
+
+import java.io.*;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayDeque;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Deque;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.Map.Entry;
-import java.util.Optional;
-import java.util.Scanner;
-import java.util.Set;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
 import java.util.function.Function;
 import java.util.jar.Attributes;
 import java.util.jar.JarEntry;
@@ -39,35 +41,7 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.zip.ZipOutputStream;
 
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.lang3.StringUtils;
-import org.apache.maven.model.Model;
-import org.apache.maven.model.building.DefaultModelBuilderFactory;
-import org.apache.maven.model.building.DefaultModelBuildingRequest;
-import org.apache.maven.model.building.ModelBuilder;
-import org.apache.maven.model.building.ModelBuildingException;
-import org.apache.maven.model.building.ModelBuildingRequest;
-import org.apache.maven.model.building.ModelBuildingResult;
-import org.apache.maven.shared.invoker.DefaultInvocationRequest;
-import org.apache.maven.shared.invoker.DefaultInvoker;
-import org.apache.maven.shared.invoker.InvocationRequest;
-import org.apache.maven.shared.invoker.InvocationResult;
-import org.apache.maven.shared.invoker.Invoker;
-import org.apache.maven.shared.invoker.MavenInvocationException;
-import org.eclipse.jgit.api.Git;
-import org.eclipse.jgit.api.errors.GitAPIException;
-import org.eclipse.jgit.diff.DiffEntry;
-import org.eclipse.jgit.diff.DiffEntry.ChangeType;
-import org.eclipse.jgit.diff.DiffEntry.Side;
-import org.eclipse.jgit.errors.RevisionSyntaxException;
-import org.eclipse.jgit.revwalk.RevCommit;
-
-import com.ttl.internal.vn.tool.builder.git.GitRef;
-import com.ttl.internal.vn.tool.builder.util.GitUtil;
-
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Getter;
+import static java.lang.Thread.sleep;
 
 public class CliBuildTool implements AutoCloseable {
     private final boolean clone;
@@ -77,7 +51,6 @@ public class CliBuildTool implements AutoCloseable {
     private final String baseRef;
     private final String targetRef;
     private final String entryFilter;
-    private final File projectPom;
     private final File patchFile;
     private final File javaHome;
     private final File m2SettingXml;
@@ -88,7 +61,6 @@ public class CliBuildTool implements AutoCloseable {
     private final List<String> configPrefixes;
     private final List<String> databaseChangePrefixes;
     private final boolean useWorkingDirectory;
-
     private final File artifactFolder;
 
     private final File targetFolder;
@@ -98,18 +70,16 @@ public class CliBuildTool implements AutoCloseable {
     private final Function<List<String>, Map<String, ArtifactInfo>> getArtifactInfo;
 
     private GitUtil gitUtil;
-    private String previousHEAD;
 
     // NOTE: Testing-purpose only
     public static void main(String[] args) throws IOException, GitAPIException, MavenInvocationException,
-            ClassNotFoundException, ModelBuildingException {
+            ClassNotFoundException, ModelBuildingException, XmlPullParserException, InterruptedException {
         String username = System.getenv("GIT_USERNAME");
         String password = System.getenv("GIT_PASSWORD");
         String repo = System.getenv("GIT_REPO");
         String baseRef = "d957b6cced461684b2a0c9b57105970f5a76ca91";
         String targetRef = "ee4c4eeaa125be05902448ae3f2a7ea7f9aa2c30";
         File artifactFolder = new File("/tmp/buildArtifact");
-        File projectPom = new File(System.getenv("PROJECT_POM"));
         File m2SettingXml = new File(System.getProperty("user.home") + "/.m2/settings_hk.xml");
         File projectFolder = new File("/tmp/buildSrc");
         try (CliBuildTool cliBuildTool = new CliBuildTool(
@@ -130,13 +100,12 @@ public class CliBuildTool implements AutoCloseable {
                 null,
                 null,
                 null,
-                projectPom,
                 null,
                 m2SettingXml,
                 DefaultCliGetArtifactInfo.getArtifactInfo(true))) {
             //
             cliBuildTool.startBuildEnvironment();
-            cliBuildTool.build(false);
+            cliBuildTool.build(false).start();
         }
     }
 
@@ -160,7 +129,6 @@ public class CliBuildTool implements AutoCloseable {
             boolean useWorkingDirectory,
             String configPrefixes,
             String databaseChangePrefixes,
-            File projectPom,
             File javaHome,
             File patchFile,
             File m2SettingXml,
@@ -182,7 +150,6 @@ public class CliBuildTool implements AutoCloseable {
         this.shouldBuildConfigJar = shouldBuildReleasePackage || shouldBuildConfigJar;
         this.shouldBuildReleasePackage = shouldBuildReleasePackage;
         this.getArtifactInfo = getArtifactInfo;
-        this.projectPom = Optional.ofNullable(projectPom).orElse(new File(this.projectFolder, "pom.xml"));
         this.m2SettingXml = m2SettingXml;
         this.useWorkingDirectory = useWorkingDirectory;
         this.configPrefixes = Optional.ofNullable(configPrefixes)
@@ -213,7 +180,7 @@ public class CliBuildTool implements AutoCloseable {
         }
     }
 
-    public List<DiffEntry> getDiff() throws IOException {
+    public static List<DiffEntry> getDiff(GitUtil gitUtil, String baseRef, String targetRef, String entryFilter, boolean useWorkingDirectory) throws IOException {
         List<DiffEntry> diffEntries;
         if (useWorkingDirectory) {
             diffEntries = gitUtil.getDiffWd(baseRef);
@@ -223,145 +190,367 @@ public class CliBuildTool implements AutoCloseable {
         return Optional
                 .ofNullable(entryFilter).map(Pattern::compile).map(pattern -> diffEntries.stream()
                         .filter(entry -> !pattern.matcher(entry.toString()).find()).collect(Collectors.toList()))
-                .orElse(List.of());
+                .orElse(diffEntries);
     }
 
-    public void build(boolean fetch) throws IOException, GitAPIException, MavenInvocationException,
-            ClassNotFoundException, ModelBuildingException {
-        try {
-            if (fetch) {
-                // Fetch latest update
-                gitUtil.fetch(username, password);
-            }
+    public List<DiffEntry> getDiff() throws IOException {
+        return getDiff(gitUtil, baseRef, targetRef, entryFilter, useWorkingDirectory);
+    }
 
-            // Clean-up previous build artifacts
-            FileUtils.deleteDirectory(targetFolder);
-            FileUtils.deleteDirectory(buildFolder);
+    @Getter
+    @Setter
+    public static class CliBuildToolBuildContext {
+        private String previousHEAD;
+        private List<String> leafModuleRelativePaths;
+        private List<DiffEntry> diffEntries;
+        private Map<String, List<DiffEntry>> moduleToDeletedEntriesMap;
+        private Map<String, List<DiffEntry>> moduleToChangedEntriesMap;
+        private Map<String, List<String>> classpathMap;
+        private Map<String, List<String>> depedendOnOtherModuleMap;
+        private Map<String, List<String>> depedendOnModuleMap;
+        private List<String> freeChangedModules;
+        private List<String> freeDeletedModules;
+        private Map<String, ArtifactInfo> artifactInfoModuleMap;
+    }
 
-            this.previousHEAD = Optional.of(gitUtil.findRef("HEAD")).map(GitRef::getRawRef).map(ref -> {
-                if (ref.isSymbolic()) {
-                    return ref.getLeaf().getName();
-                } else {
-                    return ref.getObjectId().getName();
-                }
-            }).orElseThrow(() -> new UnsupportedOperationException("should not happen with normal git repo"));
-
-            // NOTE: If useWorkingDirectory is enabled it should not perform any checkout or
-            // apply git patch
-            if (!useWorkingDirectory) {
-                checkout(targetRef);
-                if (patchFile != null) {
-                    gitUtil.applyPatchFile(patchFile);
-                }
-
-                // Copy the target pom.xml to the project folder
-                File copyTargetPomFile = new File(projectFolder, projectPom.getName());
-                if (!copyTargetPomFile.equals(projectPom)) {
-                    FileUtils.copyFileToDirectory(projectPom, projectFolder);
+    public BuildTask build(boolean fetch) throws IOException, GitAPIException, MavenInvocationException,
+            ClassNotFoundException, ModelBuildingException, XmlPullParserException, InterruptedException {
+        BuildTask buildTask = new BuildTask() {
+            @Override
+            public void cleanup() throws GitAPIException, IOException {
+                if (!useWorkingDirectory) {
+                    restoreGitWorkingDirectory(((CliBuildToolBuildContext) getBuildCtx()).getPreviousHEAD());
                 }
             }
+        };
 
-            Model mavenModelProject = buildMavenProjectModel(new File(projectFolder, projectPom.getName()));
+        buildTask.setBuildCtx(new CliBuildToolBuildContext());
+        if (fetch) {
+            GitFetchTask gitFetchTask = new GitFetchTask(gitUtil, username, password);
+            gitFetchTask.setProgressMonitor(new GitCloneProgressMonitor(gitFetchTask, new PrintWriter(System.out)));
+            buildTask.addSubTask(new DiscreteTask("Fetch latest update") {
+                @Override
+                public boolean start() throws GitAPIException {
+                    inProgress = true;
+                    gitFetchTask.start();
+                    return true;
+                }
 
-            // Calculate the diff between commits
-            List<DiffEntry> diffEntries = getDiff();
+                @Override
+                public int totalWork() {
+                    int totalWork = gitFetchTask.totalWork();
+                    return Math.max(totalWork, 0);
+                }
 
-            // Calculate submodules, changed submodules
-            List<String> modules = mavenModelProject.getModules();
-            Map<String, List<String>> moduleToDeletedEntriesMap = diffEntries.stream()
-                    .filter(entry -> entry.getChangeType() == ChangeType.DELETE)
-                    .map(entry -> entry.getPath(Side.OLD))
-                    .collect(Collectors.toMap(it -> Path.of(it).getName(0).toString(), it -> {
-                        List<String> deletedEntries = new ArrayList<>();
-                        deletedEntries.add(it);
-                        return deletedEntries;
-                    }, (acc, val) -> {
-                        acc.addAll(val);
-                        return acc;
-                    }));
-            Map<String, List<File>> changedModuleFileMap = diffEntries.stream()
-                    .filter(entry -> entry.getChangeType() != ChangeType.DELETE)
-                    .map(entry -> new File(projectFolder, entry.getPath(Side.NEW)))
-                    .collect(Collectors.toMap(it -> relativize(it, projectFolder).getName(0).toString(), it -> {
-                        List<File> changedFile = new ArrayList<>();
-                        changedFile.add(it);
-                        return changedFile;
-                    }, (acc, val) -> {
-                        acc.addAll(val);
-                        return acc;
-                    }));
-
-            // Build the classpaths of the project
-            Map<String, List<String>> classpathMap = calculateClasspaths(mavenModelProject.getPomFile(), m2SettingXml,
-                    modules);
-            Map<String, File> moduleToModuleFolderMap = modules.stream()
-                    .collect(Collectors.toMap(module -> module, module -> new File(projectFolder, module)));
-            Map<String, File> moduleTargetFolderMap = modules.stream()
-                    .collect(Collectors.toMap(module -> module, module -> Paths
-                            .get(moduleToModuleFolderMap.get(module).getAbsolutePath(), "target", "classes").toFile()));
-
-            // Calculate depedent module map: module -> depend on modules (not include self)
-            Map<String, List<String>> depedendOnOtherModuleMap = modules.stream()
-                    .collect(Collectors.toMap(module -> module, module -> {
-                        Set<File> moduleClasspaths = classpathMap.get(module).stream().map(File::new)
-                                .collect(Collectors.toSet());
-                        return moduleTargetFolderMap.entrySet().stream()
-                                .filter(it -> moduleClasspaths.contains(it.getValue())).map(Entry::getKey)
-                                .collect(Collectors.toList());
-                    }));
-            // Calculate depedent module map: module -> depend on modules (including self)
-            Map<String, List<String>> depedendOnModuleMap = depedendOnOtherModuleMap.entrySet().stream()
-                    .collect(Collectors.toMap(Entry::getKey, it -> Stream.of(List.of(it.getKey()), it.getValue())
-                            .flatMap(List::stream).collect(Collectors.toList())));
-
-            // Calculate free modules
-            Set<String> aggregratedDependOnModules = depedendOnOtherModuleMap.entrySet().stream()
-                    .flatMap(it -> it.getValue().stream()).collect(Collectors.toSet());
-            List<String> freeModules = modules.stream().filter(it -> !aggregratedDependOnModules.contains(it))
-                    .collect(Collectors.toList());
-
-            // Filter out only free modules that have submodules that have deleted files
-            List<String> freeDeletedModules = freeModules.stream().filter(module -> {
-                List<String> dependOnModules = depedendOnModuleMap.get(module);
-                return dependOnModules.stream().anyMatch(moduleToDeletedEntriesMap::containsKey);
-            }).collect(Collectors.toList());
-            // Filter out only free modules that have submodules that changed
-            List<String> freeChangedModules = freeModules.stream().filter(module -> {
-                List<String> dependOnModules = depedendOnModuleMap.get(module);
-                return dependOnModules.stream().anyMatch(changedModuleFileMap::containsKey);
-            }).collect(Collectors.toList());
-
-            // Get artifact info for each free module
-            Map<String, ArtifactInfo> artifactInfoModuleMap = getArtifactInfo.apply(freeChangedModules);
-
-            // NOTE: Write deleted entry note.txt
-            if (moduleToDeletedEntriesMap.size() > 0) {
-                noteDeletedFiles(freeDeletedModules, depedendOnModuleMap, moduleToDeletedEntriesMap);
-            }
-
-            if (shouldBuildPatch) {
-                buildPatch(freeChangedModules, depedendOnModuleMap, changedModuleFileMap, classpathMap,
-                        artifactInfoModuleMap,
-                        moduleTargetFolderMap);
-            }
-
-            if (shouldBuildConfigJar) {
-                buildConfig(freeChangedModules, depedendOnModuleMap, changedModuleFileMap, artifactInfoModuleMap,
-                        configPrefixes);
-            }
-
-            if (shouldBuildReleasePackage) {
-                buildReleasePackage(freeChangedModules, depedendOnModuleMap, changedModuleFileMap,
-                        artifactInfoModuleMap,
-                        databaseChangePrefixes);
-            }
-        } finally {
-            cleanupBuildEnvironment();
+                @Override
+                public int doneWork() {
+                    return gitFetchTask.doneWork();
+                }
+            });
         }
+
+        buildTask.addSubTask(new DiscreteTask("Clean-up previous build artifacts") {
+            @Override
+            public boolean start() throws IOException {
+                inProgress = true;
+                FileUtils.deleteDirectory(targetFolder);
+                FileUtils.deleteDirectory(buildFolder);
+                return true;
+            }
+        });
+
+        buildTask.addSubTask(new DiscreteTask("Saving previous git HEAD") {
+            @Override
+            public boolean start() throws Exception {
+                inProgress = true;
+                CliBuildToolBuildContext buildCtx = (CliBuildToolBuildContext) buildTask.getBuildCtx();
+                buildCtx.setPreviousHEAD(Optional.of(gitUtil.findRef("HEAD")).map(GitRef::getRawRef).map(ref -> {
+                    if (ref.isSymbolic()) {
+                        return ref.getLeaf().getName();
+                    } else {
+                        return ref.getObjectId().getName();
+                    }
+                }).orElseThrow(() -> new UnsupportedOperationException("should not happen with normal git repo")));
+                return true;
+            }
+        });
+
+        // NOTE: If useWorkingDirectory is enabled it should not perform any checkout or
+        // apply git patch
+        if (!useWorkingDirectory) {
+            buildTask.addSubTask(new DiscreteTask("Checking out " + targetRef) {
+                @Override
+                public boolean start() throws Exception {
+                    inProgress = true;
+                    checkout(targetRef);
+                    return true;
+                }
+            });
+            if (patchFile != null) {
+                buildTask.addSubTask(new DiscreteTask("Apply git patch") {
+                    @Override
+                    public boolean start() throws Exception {
+                        inProgress = true;
+                        gitUtil.applyPatchFile(patchFile);
+                        return true;
+                    }
+                });
+            }
+        }
+
+        buildTask.addSubTask(new DiscreteTask("Get all leaf maven submodule relative paths and their output folders") {
+            @Override
+            public boolean start() throws Exception {
+                inProgress = true;
+                Deque<String> modulesStack = new ArrayDeque<>();
+                modulesStack.add(".");
+                List<String> leafModuleRelativePaths = new ArrayList<>();
+                while (!modulesStack.isEmpty()) {
+                    String moduleRelativePath = modulesStack.pop();
+                    File moduleFolder = new File(projectFolder, moduleRelativePath);
+                    File modulePom = new File(moduleFolder, "pom.xml");
+                    Model mavenModel = buildMavenProjectModel(modulePom);
+                    if (mavenModel.getModules().isEmpty()) {
+                        String normalizeModuleRelativePath = relativize(moduleFolder, projectFolder).toString();
+                        leafModuleRelativePaths.add(normalizeModuleRelativePath);
+                    } else {
+                        modulesStack.addAll(mavenModel.getModules().stream().map(submodule -> Path.of(moduleRelativePath, submodule)).map(Path::toString).collect(Collectors.toList()));
+                    }
+                }
+                CliBuildToolBuildContext buildCtx = (CliBuildToolBuildContext) buildTask.getBuildCtx();
+                buildCtx.setLeafModuleRelativePaths(leafModuleRelativePaths);
+                return true;
+            }
+        });
+
+        buildTask.addSubTask(new DiscreteTask("Calculate the diff") {
+            @Override
+            public boolean start() throws Exception {
+                inProgress = true;
+                ((CliBuildToolBuildContext) buildTask.getBuildCtx()).setDiffEntries(getDiff());
+                return true;
+            }
+        });
+
+        // module relative path -> diffs (group by type)
+        buildTask.addSubTask(new DiscreteTask("Calculate submodules, changed submodules, submodules that have deleted entry") {
+            @Override
+            public boolean start() {
+                inProgress = true;
+                CliBuildToolBuildContext buildCtx = (CliBuildToolBuildContext) buildTask.getBuildCtx();
+                Map<String, List<DiffEntry>> moduleToDeletedEntriesMap = new HashMap<>();
+                buildCtx.setModuleToDeletedEntriesMap(moduleToDeletedEntriesMap);
+                Map<String, List<DiffEntry>> moduleToChangedEntriesMap = new HashMap<>();
+                buildCtx.setModuleToChangedEntriesMap(moduleToChangedEntriesMap);
+                List<String> leafModuleRelativePaths = buildCtx.getLeafModuleRelativePaths();
+                for (DiffEntry diffEntry : buildCtx.getDiffEntries()) {
+                    switch (diffEntry.getChangeType()) {
+                        case DELETE: {
+                            Optional.ofNullable(getModuleFromRelativePath(diffEntry.getOldPath(), leafModuleRelativePaths))
+                                    .ifPresent(moduleRelativePath ->  moduleToDeletedEntriesMap.computeIfAbsent(moduleRelativePath, k -> new ArrayList<>()).add(diffEntry));
+                            break;
+                        }
+                        case MODIFY:
+                        case COPY:
+                        case ADD: {
+                            Optional.ofNullable(getModuleFromRelativePath(diffEntry.getNewPath(), leafModuleRelativePaths))
+                                    .ifPresent(moduleRelativePath ->  moduleToChangedEntriesMap.computeIfAbsent(moduleRelativePath, k -> new ArrayList<>()).add(diffEntry));
+                            break;
+                        }
+                        case RENAME: {
+                            Optional.ofNullable(getModuleFromRelativePath(diffEntry.getOldPath(), leafModuleRelativePaths))
+                                    .ifPresent(deletedModuleRelativePath ->  moduleToDeletedEntriesMap.computeIfAbsent(deletedModuleRelativePath, k -> new ArrayList<>()).add(diffEntry));
+                            Optional.ofNullable(getModuleFromRelativePath(diffEntry.getNewPath(), leafModuleRelativePaths))
+                                    .ifPresent(modifyModuleRelativePath ->  moduleToChangedEntriesMap.computeIfAbsent(modifyModuleRelativePath, k -> new ArrayList<>()).add(diffEntry));
+                            break;
+                        }
+                        default:
+                            throw new UnsupportedOperationException("not possible to enter here");
+                    }
+                }
+                return true;
+            }
+        });
+
+        buildTask.addSubTask(new DiscreteTask("Calculate classpath of the project") {
+            private int totalWork;
+            private int doneWork;
+            private double percentage;
+
+            @Override
+            public int totalWork() {
+                return totalWork;
+            }
+
+            @Override
+            public int doneWork() {
+                return doneWork;
+            }
+
+            @Override
+            public double percentage() {
+                return percentage;
+            }
+
+            @Override
+            public boolean start() throws InterruptedException {
+                CliBuildToolBuildContext buildCtx = (CliBuildToolBuildContext) buildTask.getBuildCtx();
+                Map<String, List<String>> classpathMap = new HashMap<>();
+                buildCtx.setClasspathMap(classpathMap);
+
+                MavenTask mavenTask = calculateClasspaths(new File(projectFolder, "pom.xml"), m2SettingXml, buildCtx.getLeafModuleRelativePaths());
+                mavenTask.subscribe(new DefaultSubscriber<>() {
+                    @SuppressWarnings("unchecked")
+                    @Override
+                    public void onComplete() {
+                        Map<String, List<String>> classpaths = (Map<String, List<String>>) mavenTask.getResult();
+                        classpathMap.putAll(classpaths);
+                    }
+
+                    @Override
+                    public void onNext(Task task) {
+                        explainTask = task.explainTask();
+                        totalWork = task.totalWork();
+                        doneWork = task.doneWork();
+                        percentage = task.percentage();
+                        Optional.ofNullable(subscriber).ifPresent(it -> it.onNext(task));
+                    }
+
+                    @Override
+                    public void onError(Throwable throwable) {
+                        Optional.ofNullable(subscriber).ifPresent(it -> it.onError(throwable));
+                    }
+                });
+                ExecutorService executorService = Executors.newSingleThreadExecutor();
+                Future<Boolean> classpathMapFuture = executorService.submit(mavenTask::start);
+                while (!classpathMapFuture.isDone()) {
+                    if (isCancelled()) {
+                        classpathMapFuture.cancel(true);
+                        mavenTask.cancel();
+                    } else {
+                        sleep(100);
+                    }
+                }
+                try {
+                    if (!isCancelled()) {
+                        boolean success = classpathMapFuture.get();
+                        if (success) {
+                            mavenTask.done();
+                            return true;
+                        }
+                    }
+                    return false;
+                } catch (Exception ex1) {
+                    mavenTask.stopExceptionally(ex1);
+                    return false;
+                }
+            }
+        });
+
+
+        buildTask.addSubTask(new DiscreteTask("Calculate free modules") {
+            @Override
+            public boolean start() {
+                inProgress = true;
+                CliBuildToolBuildContext buildCtx = (CliBuildToolBuildContext) buildTask.getBuildCtx();
+                Map<String, List<String>> depedendOnOtherModuleMap = new HashMap<>();
+                Map<String, List<String>> depedendOnModuleMap = new HashMap<>();
+                List<String> freeChangedModules = new ArrayList<>();
+                List<String> freeDeletedModules = new ArrayList<>();
+                List<String> leafModuleRelativePaths = buildCtx.getLeafModuleRelativePaths();
+                Map<String, List<DiffEntry>> moduleToDeletedEntriesMap = buildCtx.getModuleToDeletedEntriesMap();
+                Map<String, List<DiffEntry>> moduleToChangedEntriesMap = buildCtx.getModuleToChangedEntriesMap();
+
+                buildCtx.setDepedendOnModuleMap(depedendOnModuleMap);
+                buildCtx.setDepedendOnOtherModuleMap(depedendOnOtherModuleMap);
+                buildCtx.setFreeChangedModules(freeChangedModules);
+                buildCtx.setFreeDeletedModules(freeDeletedModules);
+                // Calculate dependent module map: module relative path -> depend on module relative paths (not include self)
+                for (String leafModuleRelativePath : leafModuleRelativePaths) {
+                    List<String> moduleClasspaths = buildCtx.getClasspathMap().get(leafModuleRelativePath).stream()
+                            .map(Path::of)
+                            .filter(it -> it.startsWith(projectFolder.getAbsolutePath()))
+                            .map(path -> relativize(path.toFile(), projectFolder))
+                            .map(Path::toString)
+                            .map(it -> getModuleFromRelativePath(it, leafModuleRelativePaths))
+                            .collect(Collectors.toList());
+                    depedendOnOtherModuleMap.put(leafModuleRelativePath, moduleClasspaths);
+                }
+                // Calculate depedent module map: module relative path -> depend on module relative paths (including self)
+                depedendOnModuleMap.putAll(depedendOnOtherModuleMap.entrySet().stream()
+                        .collect(Collectors.toMap(Entry::getKey, it -> Stream.of(List.of(it.getKey()), it.getValue())
+                                .flatMap(List::stream).collect(Collectors.toList()))));
+
+                // Calculate free module relative paths
+                Set<String> aggregatedDependOnModuleRelativePaths = depedendOnOtherModuleMap.entrySet().stream()
+                        .flatMap(it -> it.getValue().stream()).collect(Collectors.toSet());
+                List<String> freeModuleRelativePaths = leafModuleRelativePaths.stream().filter(it -> !aggregatedDependOnModuleRelativePaths.contains(it))
+                        .collect(Collectors.toList());
+
+                // Filter out only free modules that have submodules that have deleted files
+                freeDeletedModules.addAll(freeModuleRelativePaths.stream().filter(moduleRelativePath -> {
+                    List<String> dependOnModuleRelativePaths = depedendOnModuleMap.get(moduleRelativePath);
+                    return dependOnModuleRelativePaths.stream().anyMatch(moduleToDeletedEntriesMap::containsKey);
+                }).collect(Collectors.toList()));
+
+                // Filter out only free modules that have submodules that changed
+                freeChangedModules.addAll(freeModuleRelativePaths.stream().filter(module -> {
+                    List<String> dependOnModules = depedendOnModuleMap.get(module);
+                    return dependOnModules.stream().anyMatch(moduleToChangedEntriesMap::containsKey);
+                }).collect(Collectors.toList()));
+                return true;
+            }
+        });
+
+        buildTask.addSubTask(new DiscreteTask("Get artifact info for each free module") {
+            @Override
+            public boolean start() {
+                inProgress = true;
+                CliBuildToolBuildContext buildCtx = (CliBuildToolBuildContext) buildTask.getBuildCtx();
+                buildCtx.setArtifactInfoModuleMap(getArtifactInfo.apply(buildCtx.getFreeChangedModules()));
+                return true;
+            }
+        });
+
+        buildTask.addSubTask(new DiscreteTask("Building artifact") {
+            @Override
+            public boolean start() throws Exception {
+                inProgress = true;
+                CliBuildToolBuildContext buildCtx = (CliBuildToolBuildContext) buildTask.getBuildCtx();
+
+                // NOTE: Write deleted entry note.txt
+                if (buildCtx.getModuleToDeletedEntriesMap().size() > 0) {
+                    noteDeletedFiles(buildCtx.getFreeDeletedModules(), buildCtx.getDepedendOnModuleMap(), buildCtx.getModuleToDeletedEntriesMap());
+                }
+
+                if (shouldBuildPatch) {
+                    buildPatch(buildCtx.getFreeChangedModules(), buildCtx.getDepedendOnModuleMap(), buildCtx.getModuleToChangedEntriesMap(), buildCtx.getClasspathMap(),
+                            buildCtx.getArtifactInfoModuleMap());
+                }
+
+                if (shouldBuildConfigJar) {
+                    buildConfig(buildCtx.getFreeChangedModules(), buildCtx.getDepedendOnModuleMap(), buildCtx.getModuleToChangedEntriesMap(), buildCtx.getArtifactInfoModuleMap(),
+                            configPrefixes);
+                }
+
+                if (shouldBuildReleasePackage) {
+                    buildReleasePackage(buildCtx.getFreeChangedModules(), buildCtx.getDepedendOnModuleMap(), buildCtx.getModuleToChangedEntriesMap(),
+                            buildCtx.getArtifactInfoModuleMap(),
+                            databaseChangePrefixes);
+                }
+                return true;
+            }
+        });
+        return buildTask;
+    }
+
+    private String getModuleFromRelativePath(String relativePathStr, List<String> leafModuleRelativePaths) {
+        Path relativePath = Path.of(relativePathStr);
+        return leafModuleRelativePaths.stream().filter(it -> relativePath.startsWith(Path.of(it))).findFirst().orElse(null);
     }
 
     private void noteDeletedFiles(List<String> freeModuleContainDeletedFiles,
-            Map<String, List<String>> dependOnModuleMap, Map<String, List<String>> moduleToDeletedFilesMap)
+                                  Map<String, List<String>> dependOnModuleMap, Map<String, List<DiffEntry>> moduleToDeletedEntriesMap)
             throws IOException {
         for (String module : freeModuleContainDeletedFiles) {
             File deletedNoteFile = getDeletedNoteFile(module);
@@ -374,7 +563,7 @@ public class CliBuildTool implements AutoCloseable {
                     BufferedWriter bw = new BufferedWriter(writer);) {
                 List<String> dependOnModules = dependOnModuleMap.get(module);
                 for (String dependOnModule : dependOnModules) {
-                    List<String> deletedEntries = moduleToDeletedFilesMap.getOrDefault(dependOnModule, List.of());
+                    List<String> deletedEntries = moduleToDeletedEntriesMap.getOrDefault(dependOnModule, List.of()).stream().map(DiffEntry::getOldPath).collect(Collectors.toList());
                     for (String entry : deletedEntries) {
                         bw.write(entry);
                         bw.newLine();
@@ -384,12 +573,18 @@ public class CliBuildTool implements AutoCloseable {
         }
     }
 
-    private Model buildMavenProjectModel(File pomFile) throws ModelBuildingException {
-        ModelBuilder modelBuilder = new DefaultModelBuilderFactory().newInstance();
-        ModelBuildingRequest buildingRequest = new DefaultModelBuildingRequest();
-        buildingRequest.setPomFile(pomFile);
-        ModelBuildingResult buildingResult = modelBuilder.build(buildingRequest);
-        return buildingResult.getEffectiveModel();
+    private Model buildMavenProjectModel(File pomFile) throws ModelBuildingException, IOException, XmlPullParserException {
+        MavenXpp3Reader pomReader = new MavenXpp3Reader();
+        Model simpleModel = pomReader.read(new FileInputStream(pomFile));
+        if (!Optional.ofNullable(simpleModel.getModules()).orElse(List.of()).isEmpty()) {
+            ModelBuilder modelBuilder = new DefaultModelBuilderFactory().newInstance();
+            ModelBuildingRequest buildingRequest = new DefaultModelBuildingRequest();
+            buildingRequest.setPomFile(pomFile);
+            ModelBuildingResult buildingResult = modelBuilder.build(buildingRequest);
+            return buildingResult.getEffectiveModel();
+        } else {
+            return simpleModel;
+        }
     }
 
     private static Path relativize(File child, File parent) {
@@ -402,13 +597,15 @@ public class CliBuildTool implements AutoCloseable {
 
     // package -> changed class files
     private Map<String, List<File>> filterCompiledClassesInChangedModule(URLClassLoader classLoader,
-            Map<String, List<File>> changedModuleMap, String module) throws IOException, ClassNotFoundException {
+                                                                         Map<String, List<DiffEntry>> changedModuleToEntriesMap, String module) throws IOException, ClassNotFoundException {
         Map<String, List<File>> packageToChangedClassFilesMap = new HashMap<>();
         Map<String, List<Class<?>>> packageToChangedClassesMap = new HashMap<>();
-        if (!changedModuleMap.containsKey(module)) {
+        if (!changedModuleToEntriesMap.containsKey(module)) {
             return packageToChangedClassFilesMap;
         }
-        List<File> changedJavaFilesInModule = changedModuleMap.get(module).stream()
+        List<File> changedJavaFilesInModule = changedModuleToEntriesMap.get(module).stream()
+                .map(DiffEntry::getNewPath)
+                .map(it -> new File(projectFolder, it))
                 .filter(CliBuildTool::isJavaFile)
                 .collect(Collectors.toList());
         for (File javaFile : changedJavaFilesInModule) {
@@ -426,18 +623,13 @@ public class CliBuildTool implements AutoCloseable {
                 stack.addAll(List.of(c.getDeclaredClasses()));
             }
 
-            List<File> classFiles = packageToChangedClassFilesMap.compute(packageName,
-                    (k, v) -> v == null ? new ArrayList<>() : v);
-            packageToChangedClassesMap.put(packageName, changedJavaClasses);
+            List<File> classFiles = packageToChangedClassFilesMap.computeIfAbsent(packageName, k -> new ArrayList<>());
+            packageToChangedClassesMap.computeIfAbsent(packageName, k -> new ArrayList<>()).addAll(changedJavaClasses);
             for (Class<?> c : changedJavaClasses) {
                 File classpath = new File(c.getProtectionDomain().getCodeSource().getLocation().getFile());
                 File classFile = new File(classpath, javaNameToPath(c.getName()) + ".class");
                 if (classFile.isFile()) {
-                    Path classRelativePath = relativize(classFile, projectFolder);
-                    String classModule = classRelativePath.getName(0).toString();
-                    if (classModule.trim().equals(module.trim())) {
-                        classFiles.add(classFile);
-                    }
+                    classFiles.add(classFile);
                 }
             }
         }
@@ -496,8 +688,8 @@ public class CliBuildTool implements AutoCloseable {
     }
 
     private void buildConfig(List<String> freeModules, Map<String, List<String>> dependentOnModuleMap,
-            Map<String, List<File>> changedModuleFileMap, Map<String, ArtifactInfo> artifactInfoModuleMap,
-            List<String> configPrefixes)
+                             Map<String, List<DiffEntry>> changedModuleToEntriesMap, Map<String, ArtifactInfo> artifactInfoModuleMap,
+                             List<String> configPrefixes)
             throws IOException {
         for (String module : freeModules) {
             File buildConfigFolder = getBuildConfigFolder(module);
@@ -509,7 +701,9 @@ public class CliBuildTool implements AutoCloseable {
             Map<String, List<File>> changedConfigFilesModuleMap = dependOnModules.stream()
                     .collect(Collectors.toMap(dependOnModule -> dependOnModule, dependOnModule -> {
                         File moduleFolder = new File(projectFolder, dependOnModule);
-                        return changedModuleFileMap.getOrDefault(dependOnModule, List.of()).stream()
+                        return changedModuleToEntriesMap.getOrDefault(dependOnModule, List.of()).stream()
+                                .map(DiffEntry::getNewPath)
+                                .map(it -> new File(projectFolder, it))
                                 .filter(changedFile -> {
                                     Path relativePathToModule = relativize(changedFile, moduleFolder);
                                     return configPrefixes.stream().anyMatch(relativePathToModule::startsWith);
@@ -534,11 +728,11 @@ public class CliBuildTool implements AutoCloseable {
             }
 
             if (buildConfigFolder.listFiles() != null && buildConfigFolder.listFiles().length > 0) {
-                if (artifactInfoModuleMap.get(module).isCompress()) {
+                if (artifactInfoModuleMap.get(module).isConfigCompress()) {
                     // Create a jar
                     createJarFile(getTargetConfigJarFile(module, artifactInfo), buildConfigFolder, null);
                 } else {
-                    // NOTE: I shouldn't do this, but I'm too lazy anyway
+                    // NOTE: I shouldn't use getTargetConfigJarFile, but I'm too lazy anyway
                     FileUtils.copyDirectory(buildConfigFolder,
                             getTargetConfigJarFile(module, artifactInfo).getParentFile());
                 }
@@ -547,8 +741,8 @@ public class CliBuildTool implements AutoCloseable {
     }
 
     private void buildReleasePackage(List<String> freeModules, Map<String, List<String>> dependentOnModuleMap,
-            Map<String, List<File>> changedModuleFileMap, Map<String, ArtifactInfo> artifactInfoModuleMap,
-            List<String> databaseChangePrefixes)
+                                     Map<String, List<DiffEntry>> changedModuleToEntriesMap, Map<String, ArtifactInfo> artifactInfoModuleMap,
+                                     List<String> databaseChangePrefixes)
             throws IOException {
 
         for (String module : freeModules) {
@@ -579,7 +773,9 @@ public class CliBuildTool implements AutoCloseable {
             Map<String, List<File>> changedDatabaseModuleMap = dependOnModules.stream()
                     .collect(Collectors.toMap(dependOnModule -> dependOnModule, dependOnModule -> {
                         File moduleFolder = new File(projectFolder, dependOnModule);
-                        return changedModuleFileMap.getOrDefault(dependOnModule, List.of()).stream()
+                        return changedModuleToEntriesMap.getOrDefault(dependOnModule, List.of()).stream()
+                                .map(DiffEntry::getNewPath)
+                                .map(it -> new File(projectFolder, it))
                                 .filter(changedFile -> {
                                     Path relativePathToModule = relativize(changedFile, moduleFolder);
                                     return databaseChangePrefixes.stream().anyMatch(relativePathToModule::startsWith);
@@ -633,29 +829,28 @@ public class CliBuildTool implements AutoCloseable {
         return haveFileExtension(file, ".java");
     }
 
-    private void buildPatch(List<String> freeModules, Map<String, List<String>> dependentOnModuleMap,
-            Map<String, List<File>> changedModuleFileMap, Map<String, List<String>> classpathMap,
-            Map<String, ArtifactInfo> artifactInfoModuleMap, Map<String, File> moduleTargetFolderMap)
+    private void buildPatch(List<String> freeModuleRelativePaths, Map<String, List<String>> dependentOnModuleMap,
+                            Map<String, List<DiffEntry>> changedModuleToEntriesMap, Map<String, List<String>> classpathMap,
+                            Map<String, ArtifactInfo> artifactInfoModuleMap)
             throws ClassNotFoundException, IOException, MavenInvocationException, ModelBuildingException {
-        for (String module : freeModules) {
-            File buildPatchFolder = getBuildPatchFolder(module);
+        for (String moduleRelativePath : freeModuleRelativePaths) {
+            File buildPatchFolder = getBuildPatchFolder(moduleRelativePath);
             buildPatchFolder.mkdirs();
 
-            ArtifactInfo artifactInfo = artifactInfoModuleMap.get(module);
-            List<String> classpaths = new ArrayList<>(classpathMap.get(module));
-            classpaths.add(moduleTargetFolderMap.get(module).getAbsolutePath());
+            ArtifactInfo artifactInfo = artifactInfoModuleMap.get(moduleRelativePath);
+            List<String> classpaths = new ArrayList<>(classpathMap.get(moduleRelativePath));
             List<URL> urls = new ArrayList<>();
             for (String classpath : classpaths) {
                 urls.add(new File(classpath).toURI().toURL());
             }
 
-            List<String> dependOnModules = dependentOnModuleMap.get(module);
+            List<String> dependOnModules = dependentOnModuleMap.get(moduleRelativePath);
 
-            try (URLClassLoader loader = new URLClassLoader(urls.toArray(new URL[] {}))) {
+            try (URLClassLoader loader = new URLClassLoader(urls.toArray(new URL[]{}))) {
                 for (String dependOnModule : dependOnModules) {
                     // Copy compiled classes to classes folder
                     for (Map.Entry<String, List<File>> entry : filterCompiledClassesInChangedModule(loader,
-                            changedModuleFileMap, dependOnModule).entrySet()) {
+                            changedModuleToEntriesMap, dependOnModule).entrySet()) {
                         for (File classFile : entry.getValue()) {
                             File targetFile = Paths.get(buildPatchFolder.getAbsolutePath(),
                                     javaNameToPath(entry.getKey()).toString()).toFile();
@@ -669,7 +864,7 @@ public class CliBuildTool implements AutoCloseable {
                 // Create a jar
                 Manifest manifest = new Manifest();
                 manifest.getMainAttributes().put(Attributes.Name.MANIFEST_VERSION, "1.0");
-                createJarFile(getTargetPatchJarFile(module, artifactInfo), buildPatchFolder, manifest);
+                createJarFile(getTargetPatchJarFile(moduleRelativePath, artifactInfo), buildPatchFolder, manifest);
             }
         }
     }
@@ -709,48 +904,65 @@ public class CliBuildTool implements AutoCloseable {
     }
 
     // module -> classpaths
-    private Map<String, List<String>> calculateClasspaths(File pomFile, File m2SettingsXml, List<String> modules)
-            throws MavenInvocationException, IOException {
+    private MavenTask calculateClasspaths(File pomFile, File m2SettingsXml, List<String> leafModuleRelativePaths) {
         String classpathFileName = "classpath";
-        try {
-            Invoker invoker = new DefaultInvoker();
-            InvocationRequest request = new DefaultInvocationRequest();
-            request.setPomFile(pomFile);
-            List<String> goals = new ArrayList<>();
-            goals.addAll(List.of("clean", "compile", "dependency:tree", "dependency:build-classpath"));
-            request.setGoals(goals);
-            request.setBatchMode(true);
-            request.setOffline(false);
-            request.setUserSettingsFile(m2SettingsXml);
-            request.setUpdateSnapshots(updateSnapshot);
-            request.setJavaHome(javaHome);
-            request.setMavenOpts("-Dmdep.outputFile=" + classpathFileName);
-            InvocationResult result = invoker.execute(request);
-            if (result.getExitCode() != 0) {
-                throw new UnsupportedOperationException(
-                        "Can't calculate classpaths, please check your m2 settings or pom file and make sure maven can compile the project successfully");
-            }
-            Map<String, List<String>> ret = new HashMap<>();
-            for (String module : modules) {
-                File classpathFile = Paths.get(projectFolder.getAbsolutePath(), module, classpathFileName).toFile();
-                try (
-                        Reader reader = new FileReader(classpathFile);
-                        BufferedReader br = new BufferedReader(reader);) {
-                    // Handler classpath seperator for windows also
-                    ret.put(module, Arrays.asList(br.readLine().split("[:;]")));
+        Invoker invoker = new DefaultInvoker();
+        InvocationRequest request = new DefaultInvocationRequest();
+        request.setPomFile(pomFile);
+        List<String> goals = new ArrayList<>();
+        goals.addAll(List.of("clean", "compile", "dependency:tree", "dependency:build-classpath"));
+        request.setGoals(goals);
+        request.setBatchMode(true);
+        request.setOffline(false);
+        request.setUserSettingsFile(m2SettingsXml);
+        request.setUpdateSnapshots(updateSnapshot);
+        request.setJavaHome(javaHome);
+        request.setMavenOpts("-Dmdep.outputFile=" + classpathFileName);
+        request.setShowVersion(true);
+        request.setShowErrors(true);
+        MavenTask mavenTask = new MavenTask() {
+            @Override
+            public boolean start() throws Exception {
+                try {
+                    inProgress = true;
+                    InvocationResult result = invoker.execute(request);
+                    if (result.getExitCode() != 0) {
+                        throw new UnsupportedOperationException(
+                                "Can't calculate classpaths, please check your m2 settings or pom file and make sure maven can compile the project successfully");
+                    }
+                    Map<String, List<String>> ret = new HashMap<>();
+                    for (String module : leafModuleRelativePaths) {
+                        File classpathFile = Paths.get(projectFolder.getAbsolutePath(), module, classpathFileName).toFile();
+                        try (
+                                Reader reader = new FileReader(classpathFile);
+                                BufferedReader br = new BufferedReader(reader)) {
+                            // Handler classpath seperator for windows also
+                            ret.put(module, Arrays.asList(br.readLine().split("[:;]")));
+                        }
+                    }
+                    this.result = ret;
+                    return true;
+                } finally {
+                    Deque<File> classpathFileStack = leafModuleRelativePaths.stream().map(moduleRelativePath -> Paths.get(projectFolder.getAbsolutePath(), moduleRelativePath, classpathFileName)).map(Path::toFile).collect(Collectors.toCollection(ArrayDeque::new));
+                    Set<File> classpathFiles = new HashSet<>();
+                    // Traverse up from leaf module classpath files and delete all parent classpath file up to project folder
+                    while (classpathFileStack.size() > 0) {
+                        File classpathFile = classpathFileStack.pop();
+                        File moduleFolder = classpathFile.getParentFile();
+                        classpathFiles.add(classpathFile);
+                        if (moduleFolder.equals(projectFolder)) {
+                            break;
+                        }
+                        File parentModuleFolder = moduleFolder.getParentFile();
+                        classpathFileStack.add(new File(parentModuleFolder, classpathFileName));
+                    }
+                    classpathFiles.forEach(File::delete);
                 }
             }
-            return ret;
-        } finally {
-            // Clean-up autogenerated classpath files
-            for (String module : modules) {
-                File classpathFile = Paths.get(projectFolder.getAbsolutePath(), module, classpathFileName).toFile();
-                classpathFile.delete();
-            }
-            File classpathFile = new File(projectFolder, classpathFileName);
-            classpathFile.delete();
-        }
+        };
 
+        request.setOutputHandler(mavenTask.getOutputHandler());
+        return mavenTask;
     }
 
     public static void createJarFile(File jarFile, File sourceFolder, Manifest manifest) throws IOException {
@@ -819,21 +1031,10 @@ public class CliBuildTool implements AutoCloseable {
         }
     }
 
-    private void restoreGitWorkingDirectory() throws GitAPIException, RevisionSyntaxException, IOException {
+    private void restoreGitWorkingDirectory(String previousHEAD) throws GitAPIException, RevisionSyntaxException, IOException {
         // Recheckout the previous head
         if (previousHEAD != null) {
             checkout(previousHEAD);
-        }
-        if (previousHEAD != null) {
-            previousHEAD = null;
-        }
-    }
-
-    private void cleanupProjectPom() {
-        File copiedProjectPom = new File(projectFolder, projectPom.getName());
-        // Clean-up project pom if it's copied from outside of the project folder
-        if (!copiedProjectPom.equals(projectPom)) {
-            copiedProjectPom.delete();
         }
     }
 
@@ -855,16 +1056,8 @@ public class CliBuildTool implements AutoCloseable {
         }
     }
 
-    public void cleanupBuildEnvironment() throws GitAPIException, RevisionSyntaxException, IOException {
-        if (!useWorkingDirectory) {
-            cleanupProjectPom();
-            restoreGitWorkingDirectory();
-        }
-    }
-
     @Override
     public void close() throws GitAPIException, RevisionSyntaxException, IOException {
-        cleanupBuildEnvironment();
         gitUtil.close();
     }
 
@@ -875,7 +1068,7 @@ public class CliBuildTool implements AutoCloseable {
         private String configName;
         private String patchName;
         private String releasePackageName;
-        private boolean compress; // NOTE: Only used by certain type of build
+        private boolean configCompress; // NOTE: Only used by certain type of build
     }
 
     public static class DefaultCliGetArtifactInfo {
@@ -903,7 +1096,7 @@ public class CliBuildTool implements AutoCloseable {
                                     .releasePackageName(
                                             StringUtils.isBlank(releasePackageZipFileName) ? "ReleasePackage.zip"
                                                     : releasePackageZipFileName)
-                                    .compress(!isServer)
+                                    .configCompress(!isServer)
                                     .build());
                         }
                     }
@@ -916,7 +1109,7 @@ public class CliBuildTool implements AutoCloseable {
                                 .configName("Config.jar")
                                 .patchName(isServer ? "SPatch.jar" : "Patch.jar")
                                 .releasePackageName("ReleasePackage.zip")
-                                .compress(!isServer)
+                                .configCompress(!isServer)
                                 .build();
                     }));
                 }
